Fix the spacing issues

--- a/css/grid.css
+++ b/css/grid.css
@@ -8,13 +8,16 @@
 }
 
 @media only screen and (min-width: 25em) {
+
   .s-1 {
+
     width: 100%;
   }
+
 }
 
-
 @media only screen and (min-width: 38em) {
+
   .m-1 {
     width: 100%;
   }
@@ -22,14 +25,17 @@
   .m-1-2 {
     width: 50%;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
+
   .l-4 {
     width: 100%;
   }
 
-  .l-1-4 {
+  .l-1-3 {
     width: 25%;
   }
+
 }
